Update and rename ss.json to ss.service

--- a/service/client/ss.service
+++ b/service/client/ss.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=shadowsocks-rust service
+Description=shadowsocks-rust client
 After=network.target
 [Service]
 ExecStart=/usr/local/bin/sslocal -c /etc/shadowsocks/client/ss.json
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=10
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=ssserver
+SyslogIdentifier=sslocal
 User=nobody
 Group=nogroup
 [Install]
