--- a/config/client/ss.service
+++ b/config/client/ss.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=10
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=ss
+SyslogIdentifier=sslocal
 User=nobody
 Group=nogroup
 [Install]
