--- a/config/config.ini
+++ b/config/config.ini
@@ -7,9 +7,10 @@
 OS_UPDATE=true
 
 # Cron task to automatically update OS and ss-tls-v2ray.
-# Default: empty (no auto-updates).
+# Default: empty (random time).
 # Example: run updates every day at 4:20 a.m.:
-UPDATE_SCHEDULE="20 4 * * *"
+# UPDATE_SCHEDULE="20 4 * * *"
+UPDATE_SCHEDULE=
 
 # Use either client or server to place the shadowsocks into client or server mode, respectively.
 # Possible options: server, client
