--- a/config/config.ini
+++ b/config/config.ini
@@ -8,7 +8,7 @@ OS_UPDATE=true
 
 # Cron task to automatically update OS and ss-tls-v2ray.
 # Default: empty (random time).
-# Example: run updates every day at 4:20 a.m.:
+# Example: run updates every night at 4:20 a.m.:
 # UPDATE_SCHEDULE="20 4 * * *"
 UPDATE_SCHEDULE=
 
@@ -21,6 +21,7 @@ MODE=server
 SS_ENABLED=true
 SS_VER="latest"
 SS_UPDATE=true
+SS_PASSWORD="nD3KGEu49ds2uYsWtT7bGcSrkBHxHHVw9aRHfHNE"
 SS_SERVER_ADDR=0.0.0.0
 SS_SERVER_PORT=8443
 SS_LOCAL_ADDR=0.0.0.0
@@ -30,6 +31,7 @@ SS_LOCAL_PORT=1843
 SIMPLE_TLS_ENABLED=true
 SIMPLE_TLS_VER="latest"
 SIMPLE_TLS_UPDATE=true
+SIMPLE_TLS_DOMAIN="windowsupdate.microsoft.com"
 SIMPLE_TLS_SERVER_ADDR=0.0.0.0
 SIMPLE_TLS_SERVER_PORT=443
 SIMPLE_TLS_LOCAL_ADDR=0.0.0.0
@@ -39,6 +41,7 @@ SIMPLE_TLS_LOCAL_PORT=1443
 V2RAY_ENABLED=true
 V2RAY_VER="latest"
 V2RAY_UPDATE=true
+V2RAY_DOMAIN="windowsupdate.microsoft.com"
 V2RAY_SERVER_ADDR=0.0.0.0
 V2RAY_SERVER_PORT=80
 V2RAY_LOCAL_ADDR=0.0.0.0
