--- a/config/config.ini
+++ b/config/config.ini
@@ -21,7 +21,7 @@ MODE=server
 SS_ENABLED=true
 SS_VER="latest"
 SS_UPDATE=true
-SS_PASSWORD="nD3KGEu49ds2uYsWtT7bGcSrkBHxHHVw9aRHfHNE"
+SS_PASSWORD=
 SS_SERVER_ADDR=0.0.0.0
 SS_SERVER_PORT=8443
 SS_LOCAL_ADDR=0.0.0.0
