--- a/config/config.ini
+++ b/config/config.ini
@@ -19,7 +19,7 @@ MODE=server
 
 # ShadowSocks settings
 SS_ENABLED=true
-SS_VER="latest"
+SS_VER=latest
 SS_UPDATE=true
 SS_PASSWORD=
 SS_SERVER_ADDR=0.0.0.0
@@ -29,9 +29,9 @@ SS_LOCAL_PORT=1843
 
 # simple-tls settings
 SIMPLE_TLS_ENABLED=true
-SIMPLE_TLS_VER="latest"
+SIMPLE_TLS_VER=latest
 SIMPLE_TLS_UPDATE=true
-SIMPLE_TLS_DOMAIN="windowsupdate.microsoft.com"
+SIMPLE_TLS_DOMAIN=windowsupdate.microsoft.com
 SIMPLE_TLS_SERVER_ADDR=0.0.0.0
 SIMPLE_TLS_SERVER_PORT=443
 SIMPLE_TLS_LOCAL_ADDR=0.0.0.0
@@ -39,9 +39,9 @@ SIMPLE_TLS_LOCAL_PORT=1443
 
 # v2ray settings
 V2RAY_ENABLED=true
-V2RAY_VER="latest"
+V2RAY_VER=latest
 V2RAY_UPDATE=true
-V2RAY_DOMAIN="windowsupdate.microsoft.com"
+V2RAY_DOMAIN=windowsupdate.microsoft.com
 V2RAY_SERVER_ADDR=0.0.0.0
 V2RAY_SERVER_PORT=80
 V2RAY_LOCAL_ADDR=0.0.0.0
