--- a/config/server/ss-simple-tls.service
+++ b/config/server/ss-simple-tls.service
@@ -2,7 +2,7 @@
 Description=shadowsocks+simple-tls server
 After=network.target
 [Service]
-ExecStart=simple-tls -b :443 -d 127.0.0.1:8443 -s -key /etc/shadowsocks/server/simple-tls_cert.key -cert /etc/shadowsocks/server/simple-tls_cert.cert
+ExecStart=simple-tls -b :443 -d 127.0.0.1:8443 -s -key $CONFIG_PATH/server/simple-tls_cert.key -cert $CONFIG_PATH/server/simple-tls_cert.cert
 ExecStop=pkill simple-tls
 Type=simple
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
