--- a/config/config.ini
+++ b/config/config.ini
@@ -25,8 +25,10 @@ SS_UPDATE=true
 SIMPLE_TLS_ENABLED=true
 SIMPLE_TLS_VER=latest
 SIMPLE_TLS_UPDATE=true
+SIMPLE_TLS_DOMAIN=windowsupdate.microsoft.com
 
 # v2ray settings
 V2RAY_ENABLED=true
 V2RAY_VER=latest
 V2RAY_UPDATE=true
+V2RAY_DOMAIN=windowsupdate.microsoft.com
