--- a/config/server/ss-simple-tls.service
+++ b/config/server/ss-simple-tls.service
@@ -1,19 +1,37 @@
-[Unit]
-Description=shadowsocks+simple-tls server
-After=network.target
-[Service]
-ExecStart=simple-tls -b :443 -d 127.0.0.1:8443 -s -key $CONFIG_PATH/server/simple-tls_cert.key -cert $CONFIG_PATH/server/simple-tls_cert.cert
-ExecStop=pkill simple-tls
-Type=simple
-CapabilityBoundingSet=CAP_NET_BIND_SERVICE
-AmbientCapabilities=CAP_NET_BIND_SERVICE
-LimitNOFILE=51200
-Restart=always
-RestartSec=10
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=simple-tls
-User=nobody
-Group=nogroup
-[Install]
-WantedBy=multi-user.target
+#!/bin/bash
+# description: shadowsocks+simple-tls server
+
+# Source function library.
+. $CONFIG_PATH/.config.env
+
+start() {
+    simple-tls -b :443 -d 127.0.0.1:8443 -s -key $CONFIG_PATH/server/simple-tls_cert.key -cert $CONFIG_PATH/server/simple-tls_cert.cert &
+}
+
+stop() {
+    pkill simple-tls
+}
+
+status() {
+    lsof -i -P -n | grep simple-tls
+}
+
+case "$1" in 
+    start)
+       start
+       ;;
+    stop)
+       stop
+       ;;
+    restart)
+       stop
+       start
+       ;;
+    status)
+       status
+       ;;
+    *)
+       echo "Usage: $0 {start|stop|status|restart}"
+esac
+
+exit 0 
