--- a/config/client/ss-simple-tls.service
+++ b/config/client/ss-simple-tls.service
@@ -1,15 +1,37 @@
-[Unit]
-Description=shadowsocks+simple-tls client
-After=network.target
-[Service]
-ExecStart=sslocal -c $CONFIG_PATH/client/ss-simple-tls.json
-ExecStop=pkill -f "sslocal -c $CONFIG_PATH/client/ss-simple-tls.json"
-Restart=always
-RestartSec=10
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=sslocal-simple-tls
-User=nobody
-Group=nogroup
-[Install]
-WantedBy=multi-user.target
+#!/bin/bash
+# description: shadowsocks+simple-tls client
+
+# Source function library.
+. $CONFIG_PATH/.config.env
+
+start() {
+    sslocal -c $CONFIG_PATH/client/ss-simple-tls.json &
+}
+
+stop() {
+    pkill -f "sslocal -c $CONFIG_PATH/client/ss-simple-tls.json"
+}
+
+status() {
+    lsof -i -P -n | grep sslocal
+}
+
+case "$1" in 
+    start)
+       start
+       ;;
+    stop)
+       stop
+       ;;
+    restart)
+       stop
+       start
+       ;;
+    status)
+       status
+       ;;
+    *)
+       echo "Usage: $0 {start|stop|status|restart}"
+esac
+
+exit 0
