--- a/config/config.ini
+++ b/config/config.ini
@@ -17,15 +17,15 @@ UPDATE_SCHEDULE=
 MODE=server
 
 # ShadowSocks settings
-SS_ENABLED=true
+SS_ENABLED=
 SS_VER=latest
 
 # simple-tls settings
-SIMPLE_TLS_ENABLED=true
+SIMPLE_TLS_ENABLED=
 SIMPLE_TLS_VER=latest
 SIMPLE_TLS_DOMAIN=windowsupdate.microsoft.com
 
 # v2ray settings
-V2RAY_ENABLED=true
+V2RAY_ENABLED=
 V2RAY_VER=latest
 V2RAY_DOMAIN=windowsupdate.microsoft.com
