--- a/config/config.ini
+++ b/config/config.ini
@@ -3,29 +3,28 @@
 
 # Update OS at every boot and with scheduled update.
 # Default: "true"
-OS_UPDATE=true
+OS_UPDATE=
 
 # Cron task to automatically update OS and ss-tls-v2ray.
 # Default: empty (random time).
-# Example: run updates every night at 4:20 a.m.:
-# UPDATE_SCHEDULE="20 4 * * *"
+# Example: run updates every night at 4:20 a.m.: UPDATE_SCHEDULE="20 4 * * *"
 UPDATE_SCHEDULE=
 
 # Use either client or server to place the shadowsocks into client or server mode, respectively.
 # Possible options: server, client
 # Default: server
-MODE=server
+MODE=
 
 # ShadowSocks settings
 SS_ENABLED=
-SS_VER=latest
+SS_VER=
 
 # simple-tls settings
 SIMPLE_TLS_ENABLED=
-SIMPLE_TLS_VER=latest
-SIMPLE_TLS_DOMAIN=windowsupdate.microsoft.com
+SIMPLE_TLS_VER=
+SIMPLE_TLS_DOMAIN=
 
 # v2ray settings
 V2RAY_ENABLED=
-V2RAY_VER=latest
-V2RAY_DOMAIN=windowsupdate.microsoft.com
+V2RAY_VER=
+V2RAY_DOMAIN=
