--- a/config/config.ini
+++ b/config/config.ini
@@ -18,13 +18,29 @@ MODE=
 # ShadowSocks settings
 SS_ENABLED=
 SS_VER=
+SS_SERVER_PORT=
 
 # simple-tls settings
 SIMPLE_TLS_ENABLED=
 SIMPLE_TLS_VER=
 SIMPLE_TLS_DOMAIN=
+SIMPLE_TLS_SERVER_PORT=
 
-# v2ray settings
+# v2ray settings (websocket-http mode)
 V2RAY_ENABLED=
 V2RAY_VER=
 V2RAY_DOMAIN=
+V2RAY_SERVER_PORT=
+
+# v2ray + nginx + cloudflare  (websocket-tls mode).
+# Mode v2ray + nginx + cloudflare requires unused ports 80 and 443 to function.
+# If these ports are occupied by ss, simple-tls or v2ray (in websocket-http mode), they will be automatically reconfigured to other ports:
+# simple-tls port 443 -> port 1443, v2ray port 80 -> port 1080.
+# .
+# Before enabling v2ray + nginx + cloudflare, you must rent a domain and register it in your cloudflare account.
+# Then specify it in the V2RAY_DOMAIN parameter in this file.
+# V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly.
+# LETS_ENCRYPT_ACCOUNT_EMAIL - your email for automatic registration in Let's Encrypt.
+V2RAY_CF_ENABLE=
+V2RAY_CF_COUNT=
+LETS_ENCRYPT_ACCOUNT_EMAIL=
