--- a/config/config.ini
+++ b/config/config.ini
@@ -34,7 +34,7 @@ V2RAY_SERVER_PORT=
 
 # v2ray + nginx + cloudflare  (websocket-tls mode).
 # Mode v2ray + nginx + cloudflare requires unused ports 80 and 443 to function.
-# If these ports are occupied by ss, simple-tls or v2ray (in websocket-http mode), they will be automatically reconfigured to other ports:
+# If these ports are occupied by ss, simple-tls or v2ray (in websocket-http mode), they will be automatically reconfigured to other ports. For example:
 # simple-tls port 443 -> port 1443, v2ray port 80 -> port 1080.
 # .
 # Before enabling v2ray + nginx + cloudflare, you must rent a domain and register it in your cloudflare account.
