--- a/config/config.ini
+++ b/config/config.ini
@@ -39,7 +39,7 @@ V2RAY_SERVER_PORT=
 # .
 # Before enabling v2ray + nginx + cloudflare, you must rent a domain and register it in your cloudflare account.
 # Then specify it in the V2RAY_DOMAIN parameter in this file.
-# V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly.
+# V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly. Their names will start with auto_... and they will be saved in the file ../ss/v2ray_accounts.txt
 # LETS_ENCRYPT_ACCOUNT_EMAIL - your email for automatic registration in Let's Encrypt.
 V2RAY_CF_ENABLE=
 V2RAY_CF_COUNT=
