--- a/config/config.ini
+++ b/config/config.ini
@@ -43,6 +43,6 @@ V2RAY_SERVER_PORT=
 # v2ray + nginx + cloudflare settings:
 # V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly. Their names will start with auto_... and they will be saved in the file ../ss/v2ray_accounts.txt
 # LETS_ENCRYPT_ACCOUNT_EMAIL - your email for automatic registration in Let's Encrypt.
-V2RAY_CF_ENABLE=
+V2RAY_CF_ENABLED=
 V2RAY_CF_COUNT=
 LETS_ENCRYPT_ACCOUNT_EMAIL=
