--- a/config/config.ini
+++ b/config/config.ini
@@ -41,7 +41,7 @@ V2RAY_SERVER_PORT=
 # Then specify it in the V2RAY_DOMAIN parameter in this file.
 # .
 # v2ray + nginx + cloudflare settings:
-# V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly. Their names will start with auto_... and they will be saved in the file ../ss/v2ray_accounts.txt
+# V2RAY_CF_COUNT - how many v2ray accounts (paths) to create automaticaly. Their names will start with auto_... and they will be saved in the file ../ss/v2ray_cf_accounts.txt
 # LETS_ENCRYPT_ACCOUNT_EMAIL - your email for automatic registration in Let's Encrypt.
 V2RAY_CF_ENABLED=
 V2RAY_CF_COUNT=
