Add gRPC settings to config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -24,6 +24,8 @@ SS_SERVER_PORT=
 SIMPLE_TLS_ENABLED=
 SIMPLE_TLS_VER=
 SIMPLE_TLS_DOMAIN=
+SIMPLE_TLS_GRPC_ENABLED=
+SIMPLE_TLS_GRPC_PATH=
 SIMPLE_TLS_SERVER_PORT=
 
 # v2ray settings (websocket-http mode)
